force-app/main/default/objects/sumoapp__EventType__c/sumoapp__EventType__c.object-meta.xml
<CustomObject>
    <label>SUMO Event Type</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SUMO Event Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>