force-app/main/default/objects/sumoapp__EventType__c/fields/sumoapp__Category__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>sumoapp__Category__c</referenceTo>
    <relationshipLabel>SUMO Event Types</relationshipLabel>
    <relationshipName>SUMOEventTypes</relationshipName>
    <type>Lookup</type>
</CustomField>