force-app/main/default/objects/sumoapp__EventType__c/fields/sumoapp__EventDescription__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__EventDescription__c</fullName>
    <label>Event Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>