force-app/main/default/objects/sumoapp__EventType__c/fields/sumoapp__EventName__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__EventName__c</fullName>
    <label>Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>