force-app/main/default/objects/sumoapp__EventType__c/fields/sumoapp__Hosts__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Hosts__c</fullName>
    <label>Host(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>