force-app/main/default/objects/sumoapp__EventType__c/fields/sumoapp__HostSkill__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__HostSkill__c</fullName>
    <label>Host Skills</label>
    <length>255</length>
    <type>Text</type>
</CustomField>