force-app/main/default/objects/sumoapp__EventType__c/fields/sumoapp__IsRecurring__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__IsRecurring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Recurring</label>
    <type>Checkbox</type>
</CustomField>