force-app/main/default/objects/sumoapp__EventType__c/fields/sumoapp__Location__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>sumoapp__Location__c</referenceTo>
    <relationshipLabel>SUMO Event Types</relationshipLabel>
    <relationshipName>SUMOEventTypes</relationshipName>
    <type>Lookup</type>
</CustomField>