force-app/main/default/objects/sumoapp__EventType__c/fields/sumoapp__Resources__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Resources__c</fullName>
    <label>Resource(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>