force-app/main/default/objects/sumoapp__EventType__c/fields/sumoapp__Virtual__c.field-meta.xml
<CustomField>
    <fullName>sumoapp__Virtual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Virtual</label>
    <type>Checkbox</type>
</CustomField>