force-app/main/default/objects/sumoapp__EventType__c/listViews/sumoapp__All.listView-meta.xml
<ListView>
    <fullName>sumoapp__All</fullName>
    <columns>NAME</columns>
    <columns>sumoapp__EventName__c</columns>
    <columns>sumoapp__Color__c</columns>
    <columns>sumoapp__Duration__c</columns>
    <columns>sumoapp__HostSkill__c</columns>
    <columns>sumoapp__Hosts__c</columns>
    <columns>sumoapp__Category__c</columns>
    <columns>sumoapp__IsRecurring__c</columns>
    <columns>sumoapp__Virtual__c</columns>
    <columns>sumoapp__Resources__c</columns>
    <filterScope>Everything</filterScope>
    <label>All SUMO Event Types</label>
</ListView>